# arukellt

./: .editorconfig  .generated-files  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .rustfmt.toml  .tool-versions  1  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INTERFACE-COREHIR.md  LICENSE  README.ja.md  README.md  WORKBOARD.md  ark.toml  audit-vscode-lsp-dap-false-done.json  check_layout  classify.py  clippy.toml  hello.component.wasm  merge_compiler.py  mise.toml  p2_fs_out.txt  package-lock.json  package.json  patch_emitter.py  std-task.md  t3_env_test.ark  t3_env_test.wasm  t3_simple_test.ark  t3_simple_test.wasm  template_read.ark  template_write.ark  test_block.ark  test_direct_bool.ark  test_hello.ark  (+5 more)
.agents/: impl-playground.md
.ark-t3-tmp/: buf_read.ark.err  csv_perf.ark.err  custom_iterator.ark.err  debug_trait.ark.err  debug_vec.ark.err  display_trait_vec.ark.err  fs_read_error.ark.err  fs_read_write.ark.err  io_backward_compat.ark.err  io_copy.ark.err  json_perf_decode.ark.err  ok_unit_only.ark  probe_json_step.ark  read_write.ark.err  seek.ark.err  tiny_ok_unit.ark  toml_ast.txt  toml_full_inline_dotted.ark.err  toml_full_table_header.ark.err  toml_mir.txt
.ark-test-tmp/: test_sort_min.ark
.codex-debug/: arukellt-s1-patched.wasm  arukellt-s1-patched2.wasm  arukellt-s1-patched3.wasm  arukellt-s1-patched4.wasm  arukellt-s1.wasm  min2.ark  min3.ark  min4.ark  min5.ark  min_main.ark
.cursor/: REPLACE-USER-RULE-commit.md
.github/: CODEOWNERS  ORCHESTRATION-CLASSIFICATION.txt  ORCHESTRATION-RUN-REGISTRY.md  ORCHESTRATION-WAVE1-RESULTS.md  ORCHESTRATION-WAVE1-WORK-ORDERS.md  copilot-instructions.md  lighthouserc.json
.tmp/: free_fn.ark  simple_method.ark  test_convert.ark  test_impl_i32.ark  test_simple.ark  test_string.ark  test_vec.ark
benchmarks/: README.md  bench_application_config_loader.ark  bench_application_config_loader.expected  bench_application_data_pipeline.ark  bench_application_data_pipeline.expected  bench_application_http_parser.ark  bench_application_log_processor.ark  bench_application_log_processor.expected  bench_application_template_engine.ark  bench_application_template_engine.expected  bench_compute_error_chain.ark  bench_compute_error_chain.expected  bench_cpu_closure_map.ark  bench_cpu_enum_dispatch.ark  bench_cpu_enum_dispatch.expected  bench_io_file_io.ark  bench_io_file_io.expected  bench_memory_struct_graph.ark  bench_memory_struct_graph.expected  bench_parse_tree_distance.ark  bench_parse_tree_distance.input.txt  bench_stdlib_hash_ops.ark  bench_stdlib_hash_ops.expected  bench_stdlib_json_parse.ark  bench_stdlib_text_ops.ark  bench_stdlib_time.ark  bench_stdlib_time.expected  bench_stdlib_toml.ark  binary_tree.ark  binary_tree.bench.wasm  binary_tree.c  fib.ark  fib.c  fib.grain  fib.rs  json_parse.ark  parity-check.sh  pure_logic.json  run_benchmarks.sh  schema.json  (+11 more)
bootstrap/: PROVENANCE.md  arukellt-selfhost-s3-v2.wasm  arukellt-selfhost.wasm
crates/ark-driver/: Cargo.toml
crates/ark-driver/src/: lib.rs  pipeline.rs  session.rs
crates/ark-driver/tests/: wit_import_roundtrip.rs
crates/ark-llvm/: Cargo.toml
crates/ark-llvm/src/: emit.rs  lib.rs
crates/ark-lsp/: Cargo.toml
crates/ark-lsp/src/: config.rs  lib.rs  server.rs
crates/ark-lsp/tests/: lsp_e2e.rs  lsp_perf.rs
crates/ark-playground-wasm/: Cargo.toml  README.md
crates/ark-playground-wasm/src/: lib.rs
crates/ark-wasm/: Cargo.toml
crates/ark-wasm/src/: backend_ir.rs  emit.rs  lib.rs
crates/ark-wasm/src/component/: canonical_abi.rs  handle_table.rs  mod.rs  wit.rs  wit_parse.rs  wrap.rs
crates/ark-wasm/src/emit/: mod.rs  t1_wasm32_p1.rs  t2_freestanding.rs  t3_wasm_gc.rs
crates/ark-wasm/src/emit/t1/: helpers.rs  mod.rs  operands.rs  sections.rs  stdlib.rs  stmts.rs
crates/ark-wasm/src/emit/t3/: cabi_adapters.rs  const_expr.rs  helpers.rs  layout_opt.rs  mod.rs  operands.rs  peephole.rs  reachability.rs  stdlib.rs  stmts.rs  types.rs
crates/ark-wasm/src/emit/t3_wasm_gc/: cabi_adapters.rs  const_expr.rs  helpers.rs  i31ref.rs  layout_opt.rs  mod.rs  operands.rs  peephole.rs  reachability.rs  stdlib.rs  stmts.rs  types.rs
crates/arktc/: Cargo.toml
crates/arktc-driver/: Cargo.toml
crates/arktc-driver/src/: lib.rs
crates/arktc/src/: cli.rs  commands.rs  main.rs
crates/arktc/tests/: cli.rs  docs.rs  docs_site.rs  examples.rs  help.rs  issues.rs  readme.rs  workboard.rs
crates/arktdoc/: Cargo.toml
crates/arktdoc/src/: main.rs
crates/arktdoc/tests/: cli.rs  help.rs  readme.rs
crates/arktup/: Cargo.toml
crates/arktup/src/: main.rs
crates/arktup/tests/: cli.rs  help.rs  readme.rs
crates/arukellt/: Cargo.toml
crates/arukellt/src/: cmd_doc.rs  commands.rs  main.rs  native.rs  runtime.rs
crates/arukellt/tests/: component_cli.rs  doc_command.rs  harness.rs  init_templates.rs  lazy_resolve_cli.rs  package_workspace.rs  t2_scaffold.rs  test_filter.rs
crates/chef/: Cargo.toml
crates/chef/src/: benchmark.rs  cli.rs  commands.rs  main.rs
crates/chef/tests/: cli.rs  docs.rs  examples.rs  help.rs  readme.rs
crates/lang-backend-wasm/: Cargo.toml
crates/lang-backend-wasm/src/: abi_layout.rs  closure_callback_lowering.rs  helper_usage_analysis.rs  lib.rs  postprocess.rs  runtime_helpers.rs  target_contract.rs  wat_emitter.rs
crates/lang-backend-wasm/tests/: build.rs  examples.rs
crates/lang-playground-core/: Cargo.toml
crates/lang-playground-core/src/: lib.rs
crates/lang-playground-core/tests/: api.rs
data/: core-ops.toml  native-cpp-capabilities.toml
docs/: FREEZE-v0-READY.md  README.md  _sidebar.md  abi.md  agent-harness.md  app.js  ark-toml.md  capability-surface.md  cli-reference.md  cli-startup-contract.md  compiler-phases copy.md  contributing.md  core.md  current-state.md  debug-support.md  decision-guide.md  directory-ownership.md  gc-implementation-plan.md  index.html  io.md  language-tour.md  module-resolution.md  (+16 more)
tools/host-linker/: Cargo.toml
tools/host-linker/src/: debug_runner.rs  host_http.rs  host_sockets.rs  lib.rs  main.rs  source_map.rs  wasm_debug_patch.rs
(+7655 files in other folders)
