[workspace]
resolver = "2"
members = [
    "crates/ark-lexer",
    "crates/ark-parser",
    "crates/ark-resolve",
    "crates/ark-typecheck",
    "crates/ark-mir",
    "crates/ark-wasm",
    "crates/ark-diagnostics",
    "crates/ark-stdlib",
    "crates/arukellt",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
ark-lexer = { path = "crates/ark-lexer" }
ark-parser = { path = "crates/ark-parser" }
ark-resolve = { path = "crates/ark-resolve" }
ark-typecheck = { path = "crates/ark-typecheck" }
ark-mir = { path = "crates/ark-mir" }
ark-wasm = { path = "crates/ark-wasm" }
ark-diagnostics = { path = "crates/ark-diagnostics" }
ark-stdlib = { path = "crates/ark-stdlib" }

# Shared dependencies
wasm-encoder = "0.225"
wasmtime = "29"
ariadne = "0.5"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
