[workspace]
resolver = "2"
members = [
    "scripts/bootstrap/wasm-heap-grow-patcher",
    "tools/host-linker",
]
default-members = [
    "scripts/bootstrap/wasm-heap-grow-patcher",
    "tools/host-linker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
