[package]
name = "ark-driver"
version.workspace = true
edition.workspace = true

[dependencies]
ark-lexer = { workspace = true }
ark-parser = { workspace = true }
ark-resolve = { workspace = true }
ark-typecheck = { workspace = true }
ark-hir = { workspace = true }
ark-mir = { workspace = true }
ark-wasm = { workspace = true }
ark-diagnostics = { workspace = true }
ark-target = { workspace = true }
serde = { workspace = true }
