[package]
name = "ark-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LSP server for the Arukellt language"

[dependencies]
ark-lexer = { path = "../ark-lexer" }
ark-parser = { path = "../ark-parser" }
ark-resolve = { path = "../ark-resolve" }
ark-typecheck = { path = "../ark-typecheck" }
ark-diagnostics = { path = "../ark-diagnostics" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
