[package]
name = "ark-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
ark-mir = { workspace = true }
ark-typecheck = { workspace = true }
ark-diagnostics = { workspace = true }
ark-parser = { workspace = true }
ark-target = { workspace = true }
wasm-encoder = { workspace = true }
