[package]
name = "arktc-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
lang-backend-wasm = { path = "../lang-backend-wasm" }
lang-core = { path = "../lang-core" }
lang-ir = { path = "../lang-ir" }
serde_json.workspace = true

[lints]
workspace = true
