[package]
name = "arktc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
lang-backend-wasm = { path = "../lang-backend-wasm" }
lang-core = { path = "../lang-core" }
lang-ir = { path = "../lang-ir" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "arktc"
path = "src/main.rs"
