[package]
name = "arktc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arktc-driver = { path = "../arktc-driver" }
clap.workspace = true
lang-backend-wasm = { path = "../lang-backend-wasm" }
lang-core = { path = "../lang-core" }
lang-ir = { path = "../lang-ir" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.23"

[lints]
workspace = true

[[bin]]
name = "arktc"
path = "src/main.rs"
