[package]
name = "arktdoc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
lang-core = { path = "../lang-core" }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "arktdoc"
path = "src/main.rs"
