[package]
name = "arktup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.23"

[lints]
workspace = true

[[bin]]
name = "arktup"
path = "src/main.rs"
