[package]
name = "arukellt"
version.workspace = true
edition.workspace = true

[[bin]]
name = "arukellt"
path = "src/main.rs"

[dependencies]
ark-driver = { workspace = true }
ark-lexer = { workspace = true }
ark-parser = { workspace = true }
ark-resolve = { workspace = true }
ark-typecheck = { workspace = true }
ark-mir = { workspace = true }
ark-wasm = { workspace = true }
ark-diagnostics = { workspace = true }
ark-target = { workspace = true }
ark-stdlib = { workspace = true }
ark-manifest = { workspace = true }
ark-dap = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
wasmtime = { workspace = true }
wasmparser = { workspace = true }
wasmtime-wasi = "29"
serde = { workspace = true }
serde_json = { workspace = true }
ark-lsp = { path = "../ark-lsp" }
tokio = { version = "1", features = ["full"] }

[dependencies.ark-llvm]
workspace = true
optional = true

[features]
llvm = ["dep:ark-llvm"]

[dev-dependencies]
tempfile = "3"
