[package]
name = "arukellt"
version.workspace = true
edition.workspace = true

# Per #583 (ADR-029, #585) the `arukellt` crate is now a **thin wasm-runner
# shell**. All compiler behaviour lives in the selfhost compiler
# (`src/compiler/main.ark` → `bootstrap/arukellt-selfhost.wasm`). This binary
# only locates the selfhost wasm and execs it under `wasmtime`; it has no
# dependency on `ark-driver`, `ark-mir`, `ark-wasm`, `ark-stdlib`, or any
# other compiler-core crate.

[[bin]]
name = "arukellt"
path = "src/main.rs"

[dependencies]
