[package]
name = "lang-backend-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
lang-core = { path = "../lang-core" }
lang-ir = { path = "../lang-ir" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wat.workspace = true

[dev-dependencies]
tempfile = "3.23"
