[package]
name = "lang-playground-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lang-core = { path = "../lang-core" }
lang-interp = { path = "../lang-interp" }
lang-ir = { path = "../lang-ir" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
