[package]
name = "arukellt-host-linker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arukellt-host-run"
path = "src/main.rs"

[[bin]]
name = "arukellt-debug-adapter"
path = "src/bin/debug_adapter.rs"

[[bin]]
name = "arukellt-debug-probe"
path = "src/bin/debug_probe.rs"

[[bin]]
name = "arukellt-debug-prepare"
path = "src/bin/debug_prepare.rs"

[dependencies]
wasmtime = "30"
wasmtime-wasi = "30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walrus = "0.23"
